--- a/Data_processing_problem_AI_Index.ipynb
+++ b/Data_processing_problem_AI_Index.ipynb
@@ -286,7 +286,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -294,18 +293,17 @@
     "[113 citations](https://scholar.google.com/scholar?hl=en&as_sdt=0%2C5&q=Working+hard+to+know+your+neighbor%27s+margins&btnG=) on March 1, 2020\n",
     "\n",
     "\n",
-    "![image.png](imgs/hardnet.png)"
+    "<img src=\"imgs/hardnet.png\" width=\"800\" /> "
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "and [DeblurGAN](http://openaccess.thecvf.com/content_cvpr_2018/html/Kupyn_DeblurGAN_Blind_Motion_CVPR_2018_paper.html) (CVPR 2018),\n",
     "[252 citations](https://scholar.google.com/scholar?hl=en&as_sdt=0%2C5&q=Deblurgan%3A+Blind+motion+deblurring+using+conditional+adversarial+networks&btnG=), [1.6k github stars](https://github.com/KupynOrest/DeblurGAN)\n",
     "\n",
-    "![image.png](imgs/deblurgan.png)"
+    "<img src=\"imgs/deblurgan.png\" width=\"800\" /> "
    ]
   },
   {
@@ -575,13 +573,12 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Some other papers have both incorrect institution affiliation and not connected to Ukraine again:\n",
     "https://arxiv.org/abs/1808.10862\n",
-    "![image.png](imgs/graffiti.png)"
+    "<img src=\"imgs/graffiti.png\" width=\"800\" /> "
    ]
   },
   {
